fix: layout overflow css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   display: flex;
   width: 100vw;
+  min-width: 0;
   min-height: 100vh;
   padding: 0;
   margin: 0;
