--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -1,12 +1,22 @@
 .Layout,
 .ManagerLayout {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   max-width: 100vw;
   min-height: 100vh;
+  min-width: 0;
 }
 
 .ManagerLayout {
   flex-direction: row;
-  width: 100vw;
+}
+
+.Layout-wrapper {
+  min-width: 0;
+}
+
+.Layout-wrapper main {
+  flex-basis: 0;
+  flex-grow: 1;
 }
